# aip-intern-project

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/commands/: run-phase1-2.md  run-phase3.md
analysis/: aggregate.py  compare.py  plots.py
config/: baseline.yaml  mesh.yaml  phase3.yaml  phase4.yaml
docs/: phase3-run-log.md  phase3-technical-log.md
infra/: README.md
infra/ansible/group_vars/: all.yml
infra/ansible/playbooks/: run_sweep.yml  setup_cpu.yml  setup_gpu.yml  site.yml
infra/terraform/: variables.tf  versions.tf
notebooks/phase1_baseline/: 00_overview.ipynb  01_run.ipynb  02_analysis.ipynb
notebooks/phase2_mesh/: 00_overview.ipynb  01_run.ipynb  02_analysis.ipynb
notebooks/phase3_failures/: 00_overview.ipynb  01_run.ipynb  02_analysis.ipynb
notebooks/phase4_gcc_constraints/: 00_overview.ipynb  01_run.ipynb  02_analysis.ipynb
notebooks/phase5_pinchbench/: 00_overview.ipynb
scripts/: run_baseline.py  run_mesh.py  run_phase3.py  run_phase4.py
src/aip_intern/baseline/: graph.py  nodes.py  runner.py  state.py
src/aip_intern/core/: config.py  exceptions.py  llm.py  task.py
src/aip_intern/failures/: injectors.py  scoring.py
src/aip_intern/mesh/: crew_node.py  graph.py  runner.py  state.py  tools.py
src/aip_intern/phase3/: __init__.py  runner.py
src/aip_intern/phase4/: runner.py  (+2 more)
tests/: conftest.py
tests/integration/: test_baseline_e2e.py  test_mesh_e2e.py
tests/unit/: test_analysis.py  test_baseline_nodes.py  test_config.py  test_exceptions.py  test_mesh_nodes.py  test_task.py
(+5 files in other folders)
